k3s/applications/qbittorrent/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001

      containers:
        - name: qbittorrent
          image: qbittorrentofficial/qbittorrent-nox:latest

          ports:
            - name: http
              containerPort: 8080

          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config

        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
