k3s/applications/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: applications
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
