k3s/applications/qbittorrent/service.yml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: applications
spec:
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
