k3s/applications/qbittorrent/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: applications
spec:
  ingressClassName: traefik
  rules:
    - host: qb.tanello.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
